--- a/vscode-dotnet-runtime-library/package.json
+++ b/vscode-dotnet-runtime-library/package.json
@@ -38,7 +38,7 @@
 		"@types/rimraf": "3.0.2",
 		"@types/semver": "^7.3.9",
 		"@types/shelljs": "^0.8.9",
-		"@types/vscode": "1.74.0",
+		"@types/vscode": "^1.101.0",
 		"@vscode/extension-telemetry": "^0.9.7",
 		"@vscode/sudo-prompt": "^9.3.1",
 		"@vscode/test-electron": "^2.4.1",
