--- a/vscode-dotnet-sdk-extension/package.json
+++ b/vscode-dotnet-sdk-extension/package.json
@@ -92,7 +92,7 @@
 		"@types/mocha": "^9.0.0",
 		"@types/node": "^20.0.0",
 		"@types/rimraf": "3.0.2",
-		"@types/vscode": "1.74.0",
+		"@types/vscode": "^1.101.0",
 		"@vscode/test-electron": "^2.3.9",
 		"axios": "^1.7.4",
 		"axios-cache-interceptor": "^1.0.1",
