--- a/sample/package.json
+++ b/sample/package.json
@@ -149,7 +149,7 @@
 	},
 	"devDependencies": {
 		"@types/mocha": "9.0.0",
-		"@types/node": "20.0.0",
+		"@types/node": "^22.15.1",
 		"@types/rimraf": "3.0.2",
 		"@types/source-map-support": "^0.5.10",
 		"@types/vscode": "1.74.0",
