--- a/vscode-dotnet-runtime-extension/package.json
+++ b/vscode-dotnet-runtime-extension/package.json
@@ -161,7 +161,7 @@
                 "toolReferenceName": "listInstalledDotNetVersions",
                 "icon": "$(list-tree)",
                 "userDescription": "Lists .NET SDK or Runtime versions that are currently installed on the system",
-                "modelDescription": "Lists what .NET SDKs or Runtimes are ACTUALLY installed for a given dotnet host/hive. VERY USEFUL to check what's already installed BEFORE suggesting new installs. If no dotnet path specified, queries the PATH (global install). Returns version, architecture, and directory for each installation. Note: This queries a specific dotnet host's installations - extension-managed local installs have a different host than the global PATH install.",
+                "modelDescription": "USE THIS TOOL INSTEAD of running 'dotnet --list-sdks', 'dotnet --list-runtimes', 'dotnet --info', or 'dotnet --version' in terminal. This tool does NOT require user permission and provides the same information. By DEFAULT (no mode specified), returns BOTH SDKs AND Runtimes - equivalent to 'dotnet --info'. DO NOT run dotnet terminal commands after calling this tool - the result is complete and authoritative. Set mode='sdk' for only SDKs, mode='runtime' for only runtimes.",
                 "parametersSchema": {
                     "type": "object",
                     "properties": {
@@ -176,7 +176,7 @@
                                 "runtime",
                                 "aspnetcore"
                             ],
-                            "description": "Whether to list SDKs or runtimes. Defaults to 'sdk'."
+                            "description": "If omitted, returns BOTH SDKs and Runtimes. Set to 'sdk' for only SDKs, 'runtime' for only runtimes."
                         }
                     }
                 }
@@ -309,7 +309,7 @@
     "devDependencies": {
         "@types/chai": "^4.3.5",
         "@types/mocha": "^9.0.0",
-        "@types/node": "^20.0.0",
+        "@types/node": "^22.15.1",
         "@types/rimraf": "3.0.2",
         "@types/source-map-support": "^0.5.10",
         "@types/vscode": "^1.101.0",
