--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin-tslint": "^7.0.2",
+		"@vscode/test-electron": "^2.5.2",
 		"eslint-import-resolver-typescript": "^3.6.3",
 		"eslint-plugin-import": "^2.30.0",
 		"eslint-plugin-jsdoc": "^50.2.2",
@@ -24,6 +25,8 @@
 		"typescript": "^5.5.4"
 	},
 	"devDependencies": {
+		"@types/mocha": "^10.0.10",
+		"@types/node": "^22.19.9",
 		"@types/source-map-support": "^0.5.6",
 		"@typescript-eslint/eslint-plugin": "^8.0.0",
 		"@typescript-eslint/parser": "^8.0.0",
@@ -32,6 +35,6 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-import-resolver-node": "^0.3.9",
 		"eslint-plugin-prettier": "^5.2.1",
-		"rimraf": "3.0.2"
+		"rimraf": "^3.0.2"
 	}
 }
