--- a/pipeline-templates/build-test.yaml
+++ b/pipeline-templates/build-test.yaml
@@ -33,6 +33,10 @@ jobs:
       displayName: 🔍 Test Windows
   - ${{ if eq(parameters.pool.os, 'linux') }}:
     - bash: |
+        sudo apt-get update
+        sudo apt-get install -y libgbm1
+      displayName: 📦 Install VS Code dependencies
+    - bash: |
         /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
         echo ">>> Started xvfb"
       displayName: 🎮 Start xvfb
